array.island.Island.scala.error
Erreur de compilation :
Island:4: error: not found: value l
  l = num.size - 1
  ^Island:5: error: not found: value l
  for (i <- 1 to l) {
                 ^