array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var niveaux = 0
  l = num.size - 1
  for (i <- 1 to l) {
    if (num(i) > num(i-1)) {
      niveaux = niveaux + 1
    }
  }
  return niveaux
}